gen/MyLanguageParser.java
// Generated from C:/Users/ASUS/Desktop/Compiler/MyNewLanguage/MyLanguageParser.g4 by ANTLR 4.13.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MyLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, Const=2, UseEffect=3, UseRef=4, Create=5, Function=6, From=7, Imp=8, 
		EXP=9, Use_State=10, VarType=11, Bool=12, Console=13, Class=14, ID=15, 
		Return=16, Div=17, H1=18, Img=19, P=20, Button=21, Width=22, Height=23, 
		Pixl=24, Rate=25, Src=26, OnClick=27, Minus=28, SEIMIE_QO=29, Space=30, 
		Equal=31, Esc=32, Slash=33, Colon=34, DColon=35, LParen=36, RParen=37, 
		LBrack=38, RBrack=39, LBig=40, RBig=41, RArrow=42, Lt=43, Gt=44, EE=45, 
		NE=46, NOT=47, Question=48, Star=49, Plus=50, PlusAssign=51, Underscore=52, 
		Pipe=53, COMMA=54, Dot=55, At=56, Math=57, Path=58, One_Qoute_Term=59, 
		Tow_Qoute_Term=60, Text=61, Quote=62, DQuote=63, ARRAY_STRING_VALUES=64, 
		LETTER=65, ARRAY_NUMERIC_VALUES=66;
	public static final int
		RULE_new_component = 0, RULE_useRef = 1, RULE_useEffect = 2, RULE_useEffectContent = 3, 
		RULE_imp = 4, RULE_link = 5, RULE_assign = 6, RULE_decl = 7, RULE_log = 8, 
		RULE_value = 9, RULE_export = 10, RULE_return_html = 11, RULE_pure = 12, 
		RULE_useState = 13, RULE_var = 14, RULE_fun = 15, RULE_component = 16, 
		RULE_function = 17, RULE_arrow_function = 18, RULE_html_tag = 19, RULE_tag = 20, 
		RULE_jsxTag = 21, RULE_div = 22, RULE_h1 = 23, RULE_p = 24, RULE_img = 25, 
		RULE_button = 26, RULE_props = 27, RULE_width = 28, RULE_height = 29, 
		RULE_src = 30, RULE_className = 31, RULE_id = 32, RULE_onClick = 33, RULE_javaScriptValue = 34, 
		RULE_callFunction = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"new_component", "useRef", "useEffect", "useEffectContent", "imp", "link", 
			"assign", "decl", "log", "value", "export", "return_html", "pure", "useState", 
			"var", "fun", "component", "function", "arrow_function", "html_tag", 
			"tag", "jsxTag", "div", "h1", "p", "img", "button", "props", "width", 
			"height", "src", "className", "id", "onClick", "javaScriptValue", "callFunction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'useEffect'", "'use Ref'", "'React.createElement'", 
			null, null, null, null, "'useState'", null, null, "'console.log('", "'className'", 
			"'id'", "'return'", "'div'", "'h1'", "'img'", "'p'", "'button'", null, 
			null, "'px'", "'%'", null, null, "'-'", "';'", "' '", "'='", "'\\'", 
			"'/'", "':'", "'::'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'->'", 
			"'<'", "'>'", "'=='", "'!='", "'!'", "'?'", "'*'", "'+'", "'+='", "'_'", 
			"'|'", "','", "'.'", "'@'", null, null, null, null, null, "'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "Const", "UseEffect", "UseRef", "Create", "Function", "From", 
			"Imp", "EXP", "Use_State", "VarType", "Bool", "Console", "Class", "ID", 
			"Return", "Div", "H1", "Img", "P", "Button", "Width", "Height", "Pixl", 
			"Rate", "Src", "OnClick", "Minus", "SEIMIE_QO", "Space", "Equal", "Esc", 
			"Slash", "Colon", "DColon", "LParen", "RParen", "LBrack", "RBrack", "LBig", 
			"RBig", "RArrow", "Lt", "Gt", "EE", "NE", "NOT", "Question", "Star", 
			"Plus", "PlusAssign", "Underscore", "Pipe", "COMMA", "Dot", "At", "Math", 
			"Path", "One_Qoute_Term", "Tow_Qoute_Term", "Text", "Quote", "DQuote", 
			"ARRAY_STRING_VALUES", "LETTER", "ARRAY_NUMERIC_VALUES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyLanguageParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class New_componentContext extends ParserRuleContext {
		public Return_htmlContext return_html() {
			return getRuleContext(Return_htmlContext.class,0);
		}
		public TerminalNode RBrack() { return getToken(MyLanguageParser.RBrack, 0); }
		public ExportContext export() {
			return getRuleContext(ExportContext.class,0);
		}
		public Arrow_functionContext arrow_function() {
			return getRuleContext(Arrow_functionContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public List<ImpContext> imp() {
			return getRuleContexts(ImpContext.class);
		}
		public ImpContext imp(int i) {
			return getRuleContext(ImpContext.class,i);
		}
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<LogContext> log() {
			return getRuleContexts(LogContext.class);
		}
		public LogContext log(int i) {
			return getRuleContext(LogContext.class,i);
		}
		public List<UseEffectContext> useEffect() {
			return getRuleContexts(UseEffectContext.class);
		}
		public UseEffectContext useEffect(int i) {
			return getRuleContext(UseEffectContext.class,i);
		}
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public List<UseStateContext> useState() {
			return getRuleContexts(UseStateContext.class);
		}
		public UseStateContext useState(int i) {
			return getRuleContext(UseStateContext.class,i);
		}
		public List<UseRefContext> useRef() {
			return getRuleContexts(UseRefContext.class);
		}
		public UseRefContext useRef(int i) {
			return getRuleContext(UseRefContext.class,i);
		}
		public New_componentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).enterNew_component(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).exitNew_component(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageParserVisitor ) return ((MyLanguageParserVisitor<? extends T>)visitor).visitNew_component(this);
			else return visitor.visitChildren(this);
		}
	}

	public final New_componentContext new_component() throws RecognitionException {
		New_componentContext _localctx = new New_componentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_new_component);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Imp) {
				{
				{
				setState(72);
				imp();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Const:
			case LParen:
				{
				setState(78);
				arrow_function();
				}
				break;
			case Function:
				{
				setState(79);
				function();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 2)) & ~0x3f) == 0 && ((1L << (_la - 2)) & 4611686035607259667L) != 0)) {
				{
				setState(90);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(82);
					assign();
					}
					break;
				case 2:
					{
					setState(83);
					decl();
					}
					break;
				case 3:
					{
					setState(84);
					log();
					}
					break;
				case 4:
					{
					setState(85);
					useEffect();
					}
					break;
				case 5:
					{
					setState(86);
					component();
					}
					break;
				case 6:
					{
					setState(87);
					useState();
					}
					break;
				case 7:
					{
					setState(88);
					useEffect();
					}
					break;
				case 8:
					{
					setState(89);
					useRef();
					}
					break;
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			return_html();
			setState(96);
			match(RBrack);
			setState(97);
			export();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseRefContext extends ParserRuleContext {
		public TerminalNode Const() { return getToken(MyLanguageParser.Const, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode Equal() { return getToken(MyLanguageParser.Equal, 0); }
		public TerminalNode UseRef() { return getToken(MyLanguageParser.UseRef, 0); }
		public TerminalNode LParen() { return getToken(MyLanguageParser.LParen, 0); }
		public TerminalNode ARRAY_STRING_VALUES() { return getToken(MyLanguageParser.ARRAY_STRING_VALUES, 0); }
		public TerminalNode RParen() { return getToken(MyLanguageParser.RParen, 0); }
		public List<TerminalNode> SEIMIE_QO() { return getTokens(MyLanguageParser.SEIMIE_QO); }
		public TerminalNode SEIMIE_QO(int i) {
			return getToken(MyLanguageParser.SEIMIE_QO, i);
		}
		public UseRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).enterUseRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).exitUseRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageParserVisitor ) return ((MyLanguageParserVisitor<? extends T>)visitor).visitUseRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseRefContext useRef() throws RecognitionException {
		UseRefContext _localctx = new UseRefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_useRef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(Const);
			setState(100);
			var();
			setState(101);
			match(Equal);
			setState(102);
			match(UseRef);
			setState(103);
			match(LParen);
			setState(104);
			match(ARRAY_STRING_VALUES);
			setState(105);
			match(RParen);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEIMIE_QO) {
				{
				{
				setState(106);
				match(SEIMIE_QO);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseEffectContext extends ParserRuleContext {
		public TerminalNode UseEffect() { return getToken(MyLanguageParser.UseEffect, 0); }
		public TerminalNode LParen() { return getToken(MyLanguageParser.LParen, 0); }
		public TerminalNode RBrack() { return getToken(MyLanguageParser.RBrack, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MyLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MyLanguageParser.COMMA, i);
		}
		public TerminalNode LBig() { return getToken(MyLanguageParser.LBig, 0); }
		public TerminalNode RBig() { return getToken(MyLanguageParser.RBig, 0); }
		public TerminalNode RParen() { return getToken(MyLanguageParser.RParen, 0); }
		public Arrow_functionContext arrow_function() {
			return getRuleContext(Arrow_functionContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public List<UseEffectContentContext> useEffectContent() {
			return getRuleContexts(UseEffectContentContext.class);
		}
		public UseEffectContentContext useEffectContent(int i) {
			return getRuleContext(UseEffectContentContext.class,i);
		}
		public List<TerminalNode> SEIMIE_QO() { return getTokens(MyLanguageParser.SEIMIE_QO); }
		public TerminalNode SEIMIE_QO(int i) {
			return getToken(MyLanguageParser.SEIMIE_QO, i);
		}
		public List<TerminalNode> ARRAY_STRING_VALUES() { return getTokens(MyLanguageParser.ARRAY_STRING_VALUES); }
		public TerminalNode ARRAY_STRING_VALUES(int i) {
			return getToken(MyLanguageParser.ARRAY_STRING_VALUES, i);
		}
		public UseEffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useEffect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).enterUseEffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).exitUseEffect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageParserVisitor ) return ((MyLanguageParserVisitor<? extends T>)visitor).visitUseEffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseEffectContext useEffect() throws RecognitionException {
		UseEffectContext _localctx = new UseEffectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_useEffect);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(UseEffect);
			setState(113);
			match(LParen);
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Const:
			case LParen:
				{
				setState(114);
				arrow_function();
				}
				break;
			case Function:
				{
				setState(115);
				function();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 29)) & ~0x3f) == 0 && ((1L << (_la - 29)) & 174550155649L) != 0)) {
				{
				{
				setState(118);
				useEffectContent();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(RBrack);
			setState(125);
			match(COMMA);
			setState(126);
			match(LBig);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA || _la==ARRAY_STRING_VALUES) {
				{
				{
				setState(127);
				_la = _input.LA(1);
				if ( !(_la==COMMA || _la==ARRAY_STRING_VALUES) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(RBig);
			setState(134);
			match(RParen);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEIMIE_QO) {
				{
				{
				setState(135);
				match(SEIMIE_QO);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseEffectContentContext extends ParserRuleContext {
		public TerminalNode SEIMIE_QO() { return getToken(MyLanguageParser.SEIMIE_QO, 0); }
		public List<TerminalNode> ARRAY_STRING_VALUES() { return getTokens(MyLanguageParser.ARRAY_STRING_VALUES); }
		public TerminalNode ARRAY_STRING_VALUES(int i) {
			return getToken(MyLanguageParser.ARRAY_STRING_VALUES, i);
		}
		public List<TerminalNode> ARRAY_NUMERIC_VALUES() { return getTokens(MyLanguageParser.ARRAY_NUMERIC_VALUES); }
		public TerminalNode ARRAY_NUMERIC_VALUES(int i) {
			return getToken(MyLanguageParser.ARRAY_NUMERIC_VALUES, i);
		}
		public List<TerminalNode> RParen() { return getTokens(MyLanguageParser.RParen); }
		public TerminalNode RParen(int i) {
			return getToken(MyLanguageParser.RParen, i);
		}
		public List<TerminalNode> LParen() { return getTokens(MyLanguageParser.LParen); }
		public TerminalNode LParen(int i) {
			return getToken(MyLanguageParser.LParen, i);
		}
		public List<TerminalNode> Path() { return getTokens(MyLanguageParser.Path); }
		public TerminalNode Path(int i) {
			return getToken(MyLanguageParser.Path, i);
		}
		public List<TerminalNode> Tow_Qoute_Term() { return getTokens(MyLanguageParser.Tow_Qoute_Term); }
		public TerminalNode Tow_Qoute_Term(int i) {
			return getToken(MyLanguageParser.Tow_Qoute_Term, i);
		}
		public List<TerminalNode> Dot() { return getTokens(MyLanguageParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(MyLanguageParser.Dot, i);
		}
		public UseEffectContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useEffectContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).enterUseEffectContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).exitUseEffectContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageParserVisitor ) return ((MyLanguageParserVisitor<? extends T>)visitor).visitUseEffectContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseEffectContentContext useEffectContent() throws RecognitionException {
		UseEffectContentContext _localctx = new UseEffectContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_useEffectContent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 36)) & ~0x3f) == 0 && ((1L << (_la - 36)) & 1363673091L) != 0)) {
				{
				{
				setState(141);
				_la = _input.LA(1);
				if ( !(((((_la - 36)) & ~0x3f) == 0 && ((1L << (_la - 36)) & 1363673091L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(SEIMIE_QO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpContext extends ParserRuleContext {
		public TerminalNode Imp() { return getToken(MyLanguageParser.Imp, 0); }
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public TerminalNode From() { return getToken(MyLanguageParser.From, 0); }
		public List<TerminalNode> SEIMIE_QO() { return getTokens(MyLanguageParser.SEIMIE_QO); }
		public TerminalNode SEIMIE_QO(int i) {
			return getToken(MyLanguageParser.SEIMIE_QO, i);
		}
		public TerminalNode LBrack() { return getToken(MyLanguageParser.LBrack, 0); }
		public TerminalNode RBrack() { return getToken(MyLanguageParser.RBrack, 0); }
		public List<TerminalNode> Use_State() { return getTokens(MyLanguageParser.Use_State); }
		public TerminalNode Use_State(int i) {
			return getToken(MyLanguageParser.Use_State, i);
		}
		public List<TerminalNode> UseEffect() { return getTokens(MyLanguageParser.UseEffect); }
		public TerminalNode UseEffect(int i) {
			return getToken(MyLanguageParser.UseEffect, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MyLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MyLanguageParser.COMMA, i);
		}
		public List<TerminalNode> ARRAY_STRING_VALUES() { return getTokens(MyLanguageParser.ARRAY_STRING_VALUES); }
		public TerminalNode ARRAY_STRING_VALUES(int i) {
			return getToken(MyLanguageParser.ARRAY_STRING_VALUES, i);
		}
		public ImpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).enterImp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).exitImp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageParserVisitor ) return ((MyLanguageParserVisitor<? extends T>)visitor).visitImp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpContext imp() throws RecognitionException {
		ImpContext _localctx = new ImpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_imp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(Imp);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 3)) & ~0x3f) == 0 && ((1L << (_la - 3)) & 2308094912106594449L) != 0)) {
				{
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LBrack) {
					{
					setState(150);
					match(LBrack);
					}
				}

				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 3)) & ~0x3f) == 0 && ((1L << (_la - 3)) & 2308094809027379329L) != 0)) {
					{
					{
					setState(153);
					_la = _input.LA(1);
					if ( !(((((_la - 3)) & ~0x3f) == 0 && ((1L << (_la - 3)) & 2308094809027379329L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RBrack) {
					{
					setState(159);
					match(RBrack);
					}
				}

				setState(162);
				match(From);
				}
			}

			setState(165);
			link();
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEIMIE_QO) {
				{
				{
				setState(166);
				match(SEIMIE_QO);
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LinkContext extends ParserRuleContext {
		public TerminalNode One_Qoute_Term() { return getToken(MyLanguageParser.One_Qoute_Term, 0); }
		public TerminalNode Path() { return getToken(MyLanguageParser.Path, 0); }
		public LinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_link; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).enterLink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageParserListener ) ((MyLanguageParserListener)listener).exitLink(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageParserVisitor ) return ((MyLanguageParserVisitor<? extends T>)visitor).visitLink(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinkContext link() throws RecognitionException {
		LinkContext _localctx = new LinkContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_link);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_la = _input.LA(1);
			if ( !(_la==Path || _la==One_Qoute_Term) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
